Google Maps api key added

--- a/public/rapp/public/index.html
+++ b/public/rapp/public/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4MDQL1d2dTKJQBq-alxGtbE8mCu-CLDk&libraries=places" async defer></script>
   </body>
 </html>
